--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "test": "jest --config jest.json"
   },
   "dependencies": {
+    "@types/bluebird": "^3.5.20",
+    "bluebird": "^3.5.1",
     "moment": "^2.22.1",
     "pjson": "^1.0.9",
     "ts-framework": "git+https://github.com/nxtep-io/ts-framework.git#v2",
-    "ts-framework-mongo": "git+https://github.com/nxtep-io/ts-framework-mongo.git#master",
+    "ts-framework-mongo": "git+ssh://git@github.com:nxtep-io/ts-framework-mongo.git#master",
     "ts-framework-notification": "git+ssh://git@github.com:devnup/ts-framework-notification.git",
     "ts-framework-validation": "git+ssh://git@github.com:nxtep-io/ts-framework-validation.git#master",
     "ts-node": "^3.3.0"
