--- a/app.json
+++ b/app.json
@@ -3,7 +3,14 @@
   "description": "A ready to use OAuth 2.0 authentication provider as a service",
   "repository": "https://github.com/nxtep-io/gatekeeper",
   "logo": "https://avatars0.githubusercontent.com/u/32621722?s=200&v=4",
-  "keywords": ["node", "oauth", "api"],
+  "keywords": [
+    "node",
+    "oauth",
+    "api"
+  ],
+  "addons": [
+    "mongolab:sanbox"
+  ],
   "env": {
     "NODE_ENV": "production",
     "NPM_CONFIG_PRODUCTION": "false"
