--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node --require ts-node/register start.ts",
-    "test": "jest --config jest.json"
+    "test": "jest --config jest.json",
+    "lint": "tslint --config tslint.json"
   },
   "dependencies": {
     "@types/bluebird": "^3.5.20",
