--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest": "^22.4.3",
     "mongodb-memory-server": "^1.7.3",
     "supertest": "^3.0.0",
-    "ts-jest": "^22.4.4"
+    "ts-jest": "^22.4.4",
+    "tslint": "^5.10.0"
   }
 }
