--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "postinstall": "webpack"
+    "postinstall": "webpack",
+    "watch": "webpack -w",
+    "dev": "webpack-dev-server --hot --open"
   },
   "dependencies": {
     "@types/bootstrap": "^4.1.0",
@@ -17,7 +19,9 @@
     "@types/react-router-dom": "^4.2.6",
     "@types/reactstrap": "^5.0.27",
     "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "bootstrap": "^4.1.1",
+    "gatekeeper-sdk": "../sdk",
     "holderjs": "^2.9.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
@@ -30,7 +34,9 @@
     "react-router-dom": "^4.2.2",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
-    "redux-devtools": "^3.4.1"
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
