Feat: Simple user listing in UI

--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "@types/reactstrap": "^5.0.27",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "animate.css": "^3.6.1",
     "bootstrap": "^4.1.1",
     "gatekeeper-sdk": "../sdk",
     "holderjs": "^2.9.4",
@@ -32,6 +33,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-spinners": "^0.3.2",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
