--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "animate.css": "^3.6.1",
     "bootstrap": "^4.1.1",
     "gatekeeper-sdk": "../sdk",
+    "hat": "^0.0.3",
     "holderjs": "^2.9.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
