--- a/package.json
+++ b/package.json
@@ -8,6 +8,20 @@
     "test": "jest --config jest.json",
     "lint": "tslint --fix --config tslint.json --project ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "post-commit": "git update-index --again",
+      "pre-push": "yarn test"
+    }
+  },
+  "lint-staged": {
+    "{src,tests}/**/*.ts": [
+      "tslint --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
   "dependencies": {
     "bluebird": "^3.5.1",
     "moment": "^2.22.1",
@@ -23,11 +37,15 @@
     "@types/jest": "^22.2.3",
     "@types/supertest": "^2.0.4",
     "hat": "^0.0.3",
+    "husky": "^1.0.0-rc.9",
     "jest": "^22.4.3",
+    "lint-staged": "^7.2.0",
     "mongodb-memory-server": "^1.7.3",
+    "prettier": "^1.13.7",
     "supertest": "^3.0.0",
     "ts-jest": "^22.4.4",
     "tslint": "^5.10.0",
-    "tslint-config-airbnb": "^5.9.2"
+    "tslint-config-airbnb": "^5.9.2",
+    "tslint-config-prettier": "^1.13.0"
   }
 }
