--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@types/bluebird": "^3.5.20",
     "bluebird": "^3.5.1",
+    "chance": "^1.0.16",
     "moment": "^2.22.1",
     "pjson": "^1.0.9",
-    "ts-framework": "git+https://github.com/nxtep-io/ts-framework.git#v2",
+    "ts-framework": "nxtep-io/ts-framework#v2",
     "ts-framework-mongo": "git+https://github.com/nxtep-io/ts-framework-mongo.git#master",
     "ts-framework-notification": "git+https://github.com/devnup/ts-framework-notification.git",
-    "ts-framework-validation": "git+https://github.com/nxtep-io/ts-framework-validation.git#master",
+    "ts-framework-validation": "nxtep-io/ts-framework-validation#v2",
     "ts-node": "^3.3.0"
   },
   "devDependencies": {
