Feat: Phone authorization flow updating user instance

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pjson": "^1.0.9",
     "ts-framework": "nxtep-io/ts-framework#v2",
     "ts-framework-mongo": "git+https://github.com/nxtep-io/ts-framework-mongo.git#master",
-    "ts-framework-notification": "git+https://github.com/devnup/ts-framework-notification.git",
+    "ts-framework-notification": "devnup/ts-framework-notification#feat/sms",
     "ts-framework-validation": "nxtep-io/ts-framework-validation#v2",
     "ts-node": "^3.3.0"
   },
