--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     }
   },
   "lint-staged": {
-    "{src,tests}/**/*.ts": [
+    "{api,config,tests}/**/*.ts": [
       "tslint --fix",
       "prettier --write",
       "git add"
