--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "post-commit": "git update-index --again",
-      "pre-push": "yarn test"
+      "pre-commit": "lint-staged && yarn test",
+      "post-commit": "git update-index --again"
     }
   },
   "lint-staged": {
